# musicthing

./: .gitignore  flake.nix  pyproject.toml
src/neural_vibe/: __init__.py  cli.py  encoder.py  finetune.py  indexer.py  query.py  regions.py  stimuli.py
src/neural_vibe/studies/: __init__.py  nakai2021.py  studyforrest.py
